# algo-trading-bot

./: .coveragerc  .dockerignore  .env.example  .env.template  .gitignore  .test_trades.json  ADVANCED_FEATURES_GUIDE.md  AGENTS.md  AUTO_START_COMPLETE.md  AUTO_START_GUIDE.md  AUTO_START_READY.txt  BACKTEST_AND_QUALITY_REPORT.md  BACKTEST_QUICK_SUMMARY.md  BACKTEST_STATUS.md  BACKTEST_VALIDATION_RESULTS.md  BUG_FIXES_COMPREHENSIVE.md  CLOSED_MARKET_TEST_RESULTS.md  CODEBASE_ARCHITECTURE.md  CODEBASE_REVIEW_COMPREHENSIVE.md  CODE_REVIEW_LIVE_ENGINE.md  CODE_REVIEW_ML_PIPELINE.md  CODE_REVIEW_POST_FIX.md  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETE_SUMMARY.md  COMPLETION_CERTIFICATE.txt  COMPLETION_SUMMARY.md  CONTINUOUS_EVOLUTION_RESULTS.json  CONTRIBUTING.md  DASHBOARD_GUIDE.md  DELIVERY_COMPLETE.txt  DELIVERY_SUMMARY.txt  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_REVIEW.md  DEPLOYMENT_STATUS.txt  DEPLOYMENT_STATUS_FINAL.md  DISCORD_INTEGRATION.md  DOCKER_DEPLOYMENT.txt  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCEMENTS_COMPLETE.md  (+137 more)
.cache/: alpaca_bars_7493a69951a72eabf6390a6ea199f367.json  alpaca_bars_76758f10de49d8551179f4a47e2a21b5.json  alpaca_bars_a7c67c927e392cb120a180cbc1140fc1.json  health_status.json
AGENTS/: index.html
DOCUMENTATION/: index.html
FOLDER_STRUCTURE/: index.html
INSTALLATION/: index.html
QUICK_START/: index.html
backups/: .trades_log.json
config/: api_credentials.yaml  broker_config.yaml  emergency_controls.yaml  evolved_strategy_gen364.yaml  kill_switch.json  monitoring_rules.yaml  position_limits.yaml  production_deploy.json
docs/: README.md  (+38 more)
(+411 files in other folders)
