[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-trading-bot"
version = "0.1.0"
description = "Algorithmic trading bot scaffold with backtesting and paper trading."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.21",
  "yfinance>=0.2; python_version>='3.9'",
  "yfinance<0.2; python_version<'3.9'",
  "multitasking<0.0.10; python_version<'3.9'",
  "ta>=0.11",
  "backtrader>=1.9.78.123",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "rich>=13.0",
  "tzdata>=2024.1",
  "backports.zoneinfo>=0.2; python_version<'3.9'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]
live = [
  "alpaca-trade-api>=3.0",
]
tui = [
  "textual>=0.50",
]
analytics = [
  "duckdb>=1.0; python_version>='3.9'",
]

[project.scripts]
trading-bot = "trading_bot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
